@bug architectcomp.xml corregir path de es-ES @ToDo reparar @bug route.php duplica getCategoryRoute @bug generate.php corregir que respete $object_plural_code_name
ca.sql no recuerdo los cambios
no_ca.sql magistradop.u__name -> magistradop.txt

--- a/admin/language/en-GB/en-GB.com_componentarchitect.ini
+++ b/admin/language/en-GB/en-GB.com_componentarchitect.ini
@@ -999,7 +999,7 @@ COM_COMPONENTARCHITECT_FIELDS_FIELD_ORDER_LABEL="Order"
 COM_COMPONENTARCHITECT_FIELDS_FIELD_ORDER_DESC="<p>Set this if the field is to be included as an Order field on the Admin and Site list views for the Component Objects. The field must also be set as a Filter in order for ordering to work.</p>"
 
 COM_COMPONENTARCHITECT_FIELDS_FIELD_SEARCH_LABEL="Search"
-COM_COMPONENTARCHITECT_FIELDS_FIELD_SEARCH_DESC="<p>Select whether this field will be searchable or not.</p>"
+COM_COMPONENTARCHITECT_FIELDS_FIELD_SEARCH_DESC="<p>Select whether this field will be searchable or not. No está implementado</p>"
 
 COM_COMPONENTARCHITECT_FIELDS_FIELD_READONLY_LABEL="Read Only"
 COM_COMPONENTARCHITECT_FIELDS_FIELD_READONLY_DESC="<p>Select whether this field is to be displayed as 'read only' or not.</p>"
