--- a/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/help/en-GB/j3x/com_architectcomp_admin.lyx
+++ b/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/admin/help/en-GB/j3x/com_architectcomp_admin.lyx
@@ -878,6 +878,41 @@ Permisos para que usuarios Registrados visualicen los cambios
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\align center
+\begin_inset Graphics
+	filename D:/projects/my_joomla/com_componentarchitect/components_asset/lyx/administrator_option=com_config&view=component&component=com_contenthistory.png
+	lyxscale 30
+	width 80col%
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Permisos para ocultar los botones del control de cambios
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Itemize
 Al ingresar en el modo de edición de un registro aparece el botón 
 \begin_inset Quotes eld
